Template and style UH Recurring Digital product tabs

--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
@@ -632,6 +632,10 @@ input:checked ~ .field--name-field-product-reviews > .comment-product-reviews-fo
   display: block;
 }
 
+.comment-product-reviews-form.comment-form .form-textarea-wrapper textarea {
+  max-width: 100%;
+}
+
 input#submit-review {
   display: none;
 }
