--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
@@ -35,10 +35,10 @@
   }
   .paragraph .page-title {
     display: block;
-    margin-bottom: -15px;
+    margin-bottom: -10px;
     color: #fff;
-    text-transform: uppercase;
     font-weight: 600;
+    font-family: $f-tertiary;
   }
 
   // Paragraph overrides.
