Minor recurring digital checkout complete template and jQurey changes

--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-checkout-completion-message.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-checkout-completion-message.html.twig
@@ -57,9 +57,7 @@
               </tbody>
             </table>
             {% trans %}
-              <p>This information is also available on your account page when logged in.</p>
-
-              <p><strong>Note:</strong> The software license key provided is for example purposes only. <a href="https://www.acromedia.com/contact-us" target="_blank" title="Go to Acro Media's contact page">Talk to us</a> about your recurring billing or license integration requirements.</p>
+              <strong>Note:</strong> The software license key provided is for example purposes only. <a href="https://www.acromedia.com/contact-us" target="_blank" title="Go to Acro Media's contact page">Talk to us</a> about your recurring billing or license integration requirements.
             {% endtrans %}
           {% endif %}
 
