Fix incorrect comment created date in template

--- a/web/themes/custom/commerce_2_demo/templates/comment/comment--field-product-reviews.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/comment/comment--field-product-reviews.html.twig
@@ -81,8 +81,9 @@ author_id and author_id == commented_entity.getOwnerId() ? 'by-' ~ commented_ent
     {{ content.field_review_name }}
     {{ content.field_review_rating }}
     <div class="created">
-      {{ entity.createdtime | date('F d, Y') }}
+      {{ created }}
     </div>
     {{ content.field_review}}
+     {{ dump(created) }}
   </div>
 </article>
