Apply various peer review issue fixes

--- a/web/themes/custom/commerce_2_demo/sass/custom/_content.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_content.scss
@@ -199,6 +199,10 @@ textarea.resize-vertical {
 .select-wrapper {
   margin-bottom: -4px;
 }
+// Password strength.
+.password-strength {
+  margin-bottom: 1em;
+}
 
 /**
  * Search.
