--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product.scss
@@ -678,6 +678,7 @@ input#submit-review {
     color: #c5c5c5;
     float: right;
     font-size: 0;
+    cursor: pointer;
   }
 
   .fieldset-wrapper > div > input:checked ~ label {
