--- a/web/themes/custom/commerce_2_demo/templates/commerce/commerce-checkout-completion-message.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/commerce/commerce-checkout-completion-message.html.twig
@@ -48,7 +48,7 @@
               <tbody>
               <tr>
                 <td><strong>{{ 'Download'|t }}:</strong></td>
-                <td><a href="#" title="{{ 'Link for example purposes only'|t }}">Click here</a></td>
+                <td><a href="#" title="{{ 'Link for example purposes only'|t }}">{{ 'Click here'|t }}</a></td>
               </tr>
               <tr>
                 <td><strong>{{ 'License Key'|t }}:</strong></td>
