--- a/web/themes/custom/commerce_2_demo/sass/custom/_paragraphs.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_paragraphs.scss
@@ -32,6 +32,13 @@
 }
 
 /**
+ * 3 ctas.
+ */
+.paragraph--type--3-ctas {
+  margin-bottom: 20px;
+}
+
+/**
  * 1 column content.
  */
 .paragraph.paragraph--type--1-column-content {
