--- a/web/themes/custom/commerce_2_demo/templates/block/block--type--3-ctas.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/block/block--type--3-ctas.html.twig
@@ -37,6 +37,7 @@
   {{ title_prefix }}
   {% if label %}
     <h2{{ title_attributes }}>{{ label }}</h2>
+    <div class="underline"></div>
   {% endif %}
   {{ title_suffix }}
   {% block content %}
