--- a/web/themes/custom/commerce_2_demo/templates/paragraphs/paragraph--3-ctas.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/paragraphs/paragraph--3-ctas.html.twig
@@ -38,20 +38,36 @@
  * @ingroup themeable
  */
 #}
+{% if paragraph.field_unique_class.value|length  %}
+  {% set unique_class = paragraph.field_unique_class.value|striptags %}
+{% endif %}
+
 {%
   set classes = [
     'paragraph',
-    'paragraph--type--' ~ paragraph.bundle|clean_class,
+    'paragraph--type--3-ctas',
     view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
+    unique_class ? unique_class,
   ]
 %}
 {% block paragraph %}
   <div{{ attributes.addClass(classes) }}>
     {% block content %}
-      <a href="{{ content.field_link_cta_link[0]['#url'] }}" aria-label="{{ content.field_link_cta_link[0]['#title'] }}">
-        {{ content.field_cta_image_small }}
-        <div class="field-item__title btn btn-secondary">{{ content.field_link_cta_link[0]['#title'] }}</div>
-      </a>
+      {# Linked CTA. #}
+      {% if content.field_link_cta_link|render|trim is not empty  %}
+        <a href="{{ content.field_link_cta_link[0]['#url'] }}" aria-label="{{ content.field_link_cta_link[0]['#title'] }}">
+          {# CTA content. #}
+          {{ content.field_cta_image_small }}
+          <div class="field-item__title btn btn-secondary">{{ content.field_link_cta_link[0]['#title'] }}</div>
+        </a>
+
+      {# Not linked CTA. #}
+      {% else  %}
+        <div class="no-link">
+          {# CTA content. #}
+          {{ content.field_cta_image_small }}
+        </div>
+      {% endif  %}
     {% endblock %}
   </div>
 {% endblock paragraph %}
