Fix UH Axe product add to cart form - The class defining some styles had changed with a recent commerce update. Changed to different CSS selector. - Added a form alter to alter the attribute titles. - Also fixed a few other minor styling issues with CTA paragraph.

--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
@@ -327,7 +327,8 @@
       text-align: center;
     }
 
-    div[id^='commerce-product-add-to-cart-form'] {
+    // Attribut widgets.
+    .attribute-widgets {
       margin-bottom: 0;
 
       fieldset {
