--- a/web/themes/custom/commerce_2_demo/sass/custom/_paragraphs.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/_paragraphs.scss
@@ -35,7 +35,42 @@
  * 3 ctas.
  */
 .paragraph--type--3-ctas {
+  position: relative;
   margin-bottom: 20px;
+  text-align: center;
+
+  a, .no-link {
+    display: inline-block;
+    position: relative;
+
+    .field-item__title {
+      position: absolute;
+      z-index: 5;
+      top: 50%;
+      left: 50%;
+      transform: translateY(-50%) translateX(-50%);
+    }
+  }
+
+  a {
+    img {
+      opacity: 1;
+    }
+
+    &:hover, &:focus {
+      img {
+        opacity: 0.85;
+      }
+    }
+  }
+
+  // Unique class modifiers.
+  &.link-bottom {
+    a .field-item__title {
+      top: 85%;
+      transform: translateX(-50%);
+    }
+  }
 }
 
 /**
