Add Unsplash photo credit to footer and readme

--- a/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
+++ b/web/themes/custom/commerce_2_demo/templates/pages/includes/site_footer.html.twig
@@ -104,7 +104,8 @@
 
           {# Acro Media Inc. #}
           <div class="site-footer__acro">
-            {{ 'Website design by'|t }} <a href="https://www.acromedia.com" target="_blank">{{ 'Acro Media Inc.'|t }}</a>
+            {{ 'Website design by'|t }} <a href="https://www.acromedia.com" target="_blank">{{ 'Acro Media Inc.' }}</a><br>
+            {{ 'Photos freely available from'|t }} <a href="https://www.unsplash.com" target="_blank">{{ 'Unsplash.com' }}</a>
           </div>
         </div>
       </div>
